[package]
name = "chain-unabstractor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.100"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.19"
simple_logger = "5.0.0"
tokio-util = "0.7.12"
anyhow = "1.0.75"
